@@ -1,3 +1,11 @@
+2006-12-18  Richard Levitte  <richard@levitte.org>
+
+	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Wrap the add,
+	drop and commit calls in a try block so the temporary
+	bookkeeping directory can be properly cleared even when
+	there's an exception.
+	* tests/import/__driver__.lua: Add a test
+
 2006-12-15  Nathaniel Smith  <njs@pobox.com>
 
 	* paths.cc: Add a few more normalization tests for things like
